--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,8 @@
     <div class="grid">
       <ul>
         <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="/arquitetura.html"><i class="fa fa-info-circle"></i>Arquitetura de Comp.</a></li>
-        <li><a href="/banco.html"><i class="fa fa-info-circle"></i>Banco de Dados</a></li>
-        <li><a href="/reversa.html"><i class="fa fa-info-circle"></i>Eng. Reversa</a></li>
-        <li><a href="/redes.html"><i class="fa fa-info-circle"></i>Redes de Comp.</a></li>
-        <li><a href="/armazenamento.html"><i class="fa fa-info-circle"></i>Armazenamento</a></li>
-        <li><a href="/seguranca.html"><i class="fa fa-info-circle"></i>Segurança de Comp.</a></li>
+        <li><a href="/livros_investidor.html"><i class="fa fa-info-circle"></i>Livros sobre Investimentos</a></li>
+        <li><a href="/livros_comportamento.html"><i class="fa fa-info-circle"></i>Livros sobre Comportamento</a></li>
         <li><a href="/about.html"><i class="fa fa-info-circle"></i>Sobre</a></li>
       </ul>
     </div>
