--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:og="og: http://ogp.me/ns#">
     <head>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4843090382928577",
+    enable_page_level_ads: true
+  });
+</script>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }} | {{ site.name }}</title>
