--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Dicas de Viagens</h1>
-      <h2 class="project-tagline">Restaurantes, Hospedagens, Pontos Turísticos, ...</h2>
+      <h1 class="project-name">Livros Lidos em 2019</h1>
+      <h2 class="project-tagline">Finanças, Comportamento, Tecnologia e o que vier</h2>
      <!-- e finaliza por  {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
