--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <h1 class="project-name">Livros Lidos em 2019</h1>
       <h2 class="project-tagline">Finanças, Comportamento, Tecnologia e o que vier</h2>
      {% if site.github.is_project_page %}
-        <a href="{{ https://www.alexbarros.info/livros/ }}" class="btn">Home Livros</a>
+        <a href="https://www.alexbarros.info/livros/" class="btn">Home Livros</a>
       {% endif %}
    <!--   {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
